Apply SciJava code formatter